statum-macros/tests/ui/invalid_transition_unknown_source_state.stderr
error[E0277]: the trait bound `Ghost: StateTrait` is not satisfied
  --> tests/ui/invalid_transition_unknown_source_state.rs:26:6
   |
25 | #[transition]
   | ------------- in this attribute macro expansion
26 | impl Machine<Ghost> {
   |      ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `StateTrait` is not implemented for `Ghost`
  --> tests/ui/invalid_transition_unknown_source_state.rs:23:1
   |
23 | struct Ghost;
   | ^^^^^^^^^^^^
help: the following other types implement trait `StateTrait`
  --> tests/ui/invalid_transition_unknown_source_state.rs:14:1
   |
14 | #[state]
   | ^^^^^^^^
   | |
   | `A`
   | `B`
   | `UninitializedState`
note: required by a bound in `Machine`
  --> tests/ui/invalid_transition_unknown_source_state.rs:20:1
   |
20 | #[machine]
   | ^^^^^^^^^^ required by this bound in `Machine`
   = note: this error originates in the macro `__statum_emit_machine_ghost_transition_binding_b185d3126cd88a0c` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Ghost: StateTrait` is not satisfied
  --> tests/ui/invalid_transition_unknown_source_state.rs:26:6
   |
26 | impl Machine<Ghost> {
   |      ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `StateTrait` is not implemented for `Ghost`
  --> tests/ui/invalid_transition_unknown_source_state.rs:23:1
   |
23 | struct Ghost;
   | ^^^^^^^^^^^^
help: the following other types implement trait `StateTrait`
  --> tests/ui/invalid_transition_unknown_source_state.rs:14:1
   |
14 | #[state]
   | ^^^^^^^^
   | |
   | `A`
   | `B`
   | `UninitializedState`
note: required by a bound in `Machine`
  --> tests/ui/invalid_transition_unknown_source_state.rs:20:1
   |
20 | #[machine]
   | ^^^^^^^^^^ required by this bound in `Machine`
   = note: this error originates in the attribute macro `state` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Ghost: StateTrait` is not satisfied
  --> tests/ui/invalid_transition_unknown_source_state.rs:27:13
   |
27 |     fn to_b(self) -> Machine<B> {
   |             ^^^^ unsatisfied trait bound
   |
help: the trait `StateTrait` is not implemented for `Ghost`
  --> tests/ui/invalid_transition_unknown_source_state.rs:23:1
   |
23 | struct Ghost;
   | ^^^^^^^^^^^^
help: the following other types implement trait `StateTrait`
  --> tests/ui/invalid_transition_unknown_source_state.rs:14:1
   |
14 | #[state]
   | ^^^^^^^^
   | |
   | `A`
   | `B`
   | `UninitializedState`
note: required by a bound in `Machine`
  --> tests/ui/invalid_transition_unknown_source_state.rs:20:1
   |
20 | #[machine]
   | ^^^^^^^^^^ required by this bound in `Machine`
   = note: this error originates in the attribute macro `state` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no variant or associated item named `Ghost` found for enum `StateId` in the current scope
  --> tests/ui/invalid_transition_unknown_source_state.rs:25:1
   |
20 | #[machine]
   | ---------- variant or associated item `Ghost` not found for this enum
...
25 | #[transition]
   | ^^^^^^^^^^^^^ variant or associated item not found in `StateId`
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `transition` exists for struct `Machine<Ghost>`, but its trait bounds were not satisfied
  --> tests/ui/invalid_transition_unknown_source_state.rs:28:14
   |
20 | #[machine]
   | ---------- method `transition` not found for this struct because it doesn't satisfy `Machine<Ghost>: TransitionTo<_>`
...
23 | struct Ghost;
   | ------------ doesn't satisfy `Ghost: StateMarker` or `Ghost: StateTrait`
...
28 |         self.transition()
   |              ^^^^^^^^^^ method cannot be called on `Machine<Ghost>` due to unsatisfied trait bounds
   |
note: the following trait bounds were not satisfied:
      `Ghost: StateMarker`
      `Ghost: StateTrait`
  --> tests/ui/invalid_transition_unknown_source_state.rs:20:1
   |
20 | #[machine]
   | ^^^^^^^^^^
note: the traits `StateMarker` and `StateTrait` must be implemented
  --> tests/ui/invalid_transition_unknown_source_state.rs:14:1
   |
14 | #[state]
   | ^^^^^^^^
   |
  ::: $WORKSPACE/statum-core/src/lib.rs
   |
   | pub trait StateMarker {
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is implemented and in scope
note: `TransitionTo` defines an item `transition`, perhaps you need to implement it
  --> tests/ui/invalid_transition_unknown_source_state.rs:20:1
   |
20 | #[machine]
   | ^^^^^^^^^^
   = note: this error originates in the macro `__statum_emit_machine_from_state_family` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Ghost: StateMarker` is not satisfied in `Machine<Ghost>`
  --> tests/ui/invalid_transition_unknown_source_state.rs:27:13
   |
27 |     fn to_b(self) -> Machine<B> {
   |             ^^^^ unsatisfied trait bound
   |
help: within `Machine<Ghost>`, the trait `StateMarker` is not implemented for `Ghost`
  --> tests/ui/invalid_transition_unknown_source_state.rs:23:1
   |
23 | struct Ghost;
   | ^^^^^^^^^^^^
help: the following other types implement trait `StateMarker`
  --> tests/ui/invalid_transition_unknown_source_state.rs:14:1
   |
14 | #[state]
   | ^^^^^^^^
   | |
   | `A`
   | `B`
   | `UninitializedState`
note: required because it appears within the type `Machine<Ghost>`
  --> tests/ui/invalid_transition_unknown_source_state.rs:20:1
   |
20 | #[machine]
   | ^^^^^^^^^^
   = note: this error originates in the attribute macro `state` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
help: function arguments must have a statically known size, borrowed types always have a known size
   |
27 |     fn to_b(&self) -> Machine<B> {
   |             +
